Trying to fix the mobile overflow problem on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -537,7 +537,7 @@ figure.snip0019:hover figcaption::before {
   letter-spacing:.7px;
   text-align: left;
   padding-bottom: 0px;
-  word-wrap: break-word; 
+
 }
 .row3 h3{
   font-family: sans-serif;
